# httpstate

./: .gitignore  AGENTS.md  README.md
.github/workflows/: go-git-tag.yml  python-pypi-upload.yml  react-npm-publish.yml  rust-crates-io-publish.yml  typescript-npm-publish.yml
go/: go.mod  httpstate.go
iOS/httpstate-iOS/: ContentView.swift  Favorite.swift  FavoritesSheet.swift  FavoritesStore.swift  HTTPStateData.swift  HTTPStateViewModel.swift  httpstate_iOSApp.swift
iOS/httpstate-iOS-Accessory/: AppIntent.swift  HTTPStateData.swift  HTTPStateService.swift  httpstate_iOS_Accessory.swift  httpstate_iOS_AccessoryBundle.swift
iOS/httpstate-iOS-Widget/: AppIntent.swift  HTTPStateService.swift  httpstate_iOS_Widget.swift  httpstate_iOS_WidgetBundle.swift
iOS/httpstate-iOS.xcodeproj/: project.pbxproj
macOS/httpstate-macOS/: ContentView.swift  HTTPStateData.swift  HTTPStateViewModel.swift  MenuBarManager.swift  httpstate_macOSApp.swift
macOS/httpstate-macOS-Widget/: AppIntent.swift  HTTPStateData.swift  httpstate_macOS_Widget.swift  httpstate_macOS_WidgetBundle.swift
macOS/httpstate-macOS.xcodeproj/: project.pbxproj
python/: README.md  pyproject.toml
python/src/httpstate/: __init__.py  httpstate.py
react/: README.md  package-lock.json  package.json  tsconfig.json
react/src/: useHttpState.ts
ruby/: Gemfile  httpstate-0.1.0.gem  httpstate-0.1.1.gem  httpstate.gemspec
ruby/lib/: httpstate.rb
ruby/lib/httpstate/: version.rb
ruby/sig/: httpstate.rbs
rust/: .gitignore  Cargo.toml
rust/src/: lib.rs
swift/: Package.swift
swift/Sources/HTTPState/: Configuration.swift  HTTPStateClient.swift  HTTPStateError.swift  Transport.swift  WebSocketChannel.swift
swift/Sources/HTTPStateClient/: HTTPStateClient+Default.swift
test/go/: go.mod  go.sum  quickstart.go
test/java/: QuickStart.java
test/python/: requirements.txt
test/ruby/: quickstart.rb
test/rust/: Cargo.toml
test/typescript/: package-lock.json  package.json
typescript/: README.md  package-lock.json  package.json  tsconfig.json
typescript/src/: index.ts  tsup.config.ts
util/: version.patch.py
(+23 files in other folders)
