[build-system]
build-backend = "hatchling.build"
requires = ["hatchling >= 1.26"]

[project]
authors = [{ email="alex@httpstate.com", name="Alex Morales, HTTPState" }]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3"
]
dependencies = ["websockets>=16.0"]
description = "HTTPState, httpstate.com"
keywords = ["httpstate"]
license = "AGPL-3.0"
license-files = ["LICEN[CS]E*"]
name = "httpstate"
readme = "README.md"
requires-python = ">=3.10"
version = "0.0.14"

[project.url]
Homepage = "https://httpstate.com"
