[package]
authors = ["Alex Morales, HTTP State <alex@httpstate.com>"]
description = "HTTP State, httpstate.com"
edition = "2024"
license = "AGPL-3.0"
name = "httpstate"
repository = "https://github.com/httpstate/httpstate"
version = "0.0.2"

[dependencies]
reqwest = "0.13.2"
tokio = { features=["macros", "rt-multi-thread"], version="1.49.0" }
tungstenite = "0.28.0"
url = "2.5.8"
