[package]
authors = ["Alex Morales, HTTPState <alex@httpstate.com>"]
description = "HTTPState, httpstate.com"
edition = "2024"
license = "AGPL-3.0"
name = "httpstate"
repository = "https://github.com/httpstate/httpstate"
version = "0.0.5"

[dependencies]
reqwest = "0.13.2"
tokio = { features=["macros", "rt-multi-thread", "signal"], version="1.49.0" }
tungstenite = { features = ["native-tls"], version = "0.28.0" }
url = "2.5.8"
